Make sure i-button content is centrally aligned

--- a/indico/htdocs/sass/partials/_buttons.scss
+++ b/indico/htdocs/sass/partials/_buttons.scss
@@ -152,6 +152,7 @@ $i-button-spacing: 0.3rem;
     padding: 4px 10px 4px;
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     white-space: nowrap;
 
     & ~ .i-button,
